--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -103,7 +103,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                plugins: [play()],
+                // plugins: [play()],
                 animation: animations.flip,
                 easing: easings.sine,
             };
@@ -146,7 +146,7 @@
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
                     getSlides(limit, theme).then(() => {
                         slidy = slidyCore(node, options);
-                        slidyT = slidyCore(thumbs, { index: options.index, snap: 'center' });
+                        slidyT = slidyCore(thumbs, options);
                         setTimeout(setEvents);
                     });
                 });
