@slidy/core - add dev play() plugin progress

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -103,7 +103,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                // plugins: [play()],
+                plugins: [play()],
                 animation: animations.flip,
                 easing: easings.sine,
             };
@@ -122,7 +122,7 @@
             };
             window.playButton = (button) => {
                 button.classList.toggle('active');
-
+                progress.classList.toggle('active');
                 if (button.classList.contains('active')) {
                     window.play.play();
                     button.innerText = 'stop';
@@ -131,11 +131,24 @@
                     button.innerText = 'play';
                 }
             };
-            // main.addEventListener('pause', console.log);
-            // main.addEventListener('resume', console.log);
-            // main.onpause = console.log;
-            // node.addEventListener('pause', console.log);
-            // node.addEventListener('resume', console.log);
+            // node.addEventListener('play', () => {
+            //     progress.classList.add('active');
+            //     autoplay.classList.add('active');
+            //     autoplay.innerText = 'stop';
+            // });
+            node.addEventListener('pause', () => {
+                progress.classList.remove('active');
+                autoplay.innerText = 'pause';
+            });
+            node.addEventListener('resume', () => {
+                progress.classList.add('active');
+                autoplay.innerText = 'play';
+            });
+            node.addEventListener('stop', () => {
+                progress.classList.remove('active');
+                autoplay.classList.remove('active');
+                autoplay.innerText = 'play';
+            });
 
             console.log('window:', window);
 
@@ -146,11 +159,41 @@
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
                     getSlides(limit, theme).then(() => {
                         slidy = slidyCore(node, options);
-                        slidyT = slidyCore(thumbs, options);
+                        slidyT = slidyCore(thumbs);
                         setTimeout(setEvents);
                     });
                 });
         </script>
+        <style>
+            #progress::after {
+                --animation: paused;
+                content: '';
+                display: flex;
+                height: 0.1rem;
+                background: var(--accent);
+                transform: scaleX(1);
+                transform-origin: bottom right;
+                animation-name: progress;
+                animation-duration: 1500ms;
+                animation-fill-mode: 1;
+                animation-iteration-count: infinite;
+                animation-play-state: var(--animation);
+            }
+
+            #progress.active::after {
+                --animation: running;
+            }
+
+            @keyframes progress {
+                from {
+                    transform: scaleX(1);
+                }
+
+                to {
+                    transform: scaleX(0);
+                }
+            }
+        </style>
     </head>
 
     <body>
@@ -164,6 +207,7 @@
             <ul id="node" tabindex="0"></ul>
             <nav id="thumbs" style="--gap: 1rem; --flow: row; --width: 68px; --height: 100px;"></nav>
         </main>
+        <div id="progress"></div>
 
         <footer>
             <nav>
@@ -174,7 +218,7 @@
                 <button id="next" onclick="slidy.to(options.index + 1, +100)">→</button>
                 <!-- <button id="-" onclick="node.removeChild(node.lastChild);">-</button> -->
                 <!-- <button id="+" onclick="node.appendChild(createElement('li'))">+</button> -->
-                <button id="autoplay" class="" onclick="playButton(this)">play</button>
+                <button id="autoplay" onclick="playButton(this)">play</button>
             </nav>
 
             <!-- <nav id="dots"></nav> -->
