--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -152,16 +152,18 @@
 
             console.log('window:', window);
 
+            getSlides(limit, theme).then(() => {
+                slidy = slidyCore(node, options);
+                slidyT = slidyCore(thumbs);
+                setTimeout(setEvents);
+            });
+
             fetch('https://unpkg.com/@slidy/core/package.json')
-                .then(async (res) => await res.json())
+                .then((res) => res.json())
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - NativeJS`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
-                    getSlides(limit, theme).then(() => {
-                        slidy = slidyCore(node, options);
-                        slidyT = slidyCore(thumbs);
-                        setTimeout(setEvents);
-                    });
+
                 });
         </script>
         <style>
