--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -19,4 +20,10 @@
     <body>
         <div id="root"></div>
     </body>
+
+    <script type="module">
+        new EventSource('/esbuild')
+            .addEventListener('change', () => location.reload());
+    </script>
+
 </html>
