--- a/packages/solid/public/index.html
+++ b/packages/solid/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -17,4 +18,10 @@
     </head>
 
     <body></body>
+
+    <script type="module">
+        new EventSource('/esbuild')
+            .addEventListener('change', () => location.reload());
+    </script>
+
 </html>
