--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -103,7 +103,7 @@
                 loop: false,
                 snap: 'center',
                 axis: 'x',
-                // plugins: [play()],
+                plugins: [play()],
                 animation: animations.flip,
                 easing: easings.sine,
             };
@@ -149,24 +149,24 @@
             //     slidy.to(index);
             //     // slidy.update({ index });
             // };
-            // node.addEventListener('play', () => {
-            //     progress.classList.add('active');
-            //     autoplay.classList.add('active');
-            //     autoplay.innerText = 'stop';
-            // });
-            // node.addEventListener('pause', () => {
-            //     progress.classList.add('pause');
-            //     autoplay.innerText = 'pause';
-            // });
-            // node.addEventListener('resume', () => {
-            //     progress.classList.remove('pause');
-            //     autoplay.innerText = 'stop';
-            // });
-            // node.addEventListener('stop', () => {
-            //     progress.classList.remove('active');
-            //     autoplay.classList.remove('active');
-            //     autoplay.innerText = 'play';
-            // });
+            node.addEventListener('play', () => {
+                progress.classList.add('active');
+                autoplay.classList.add('active');
+                autoplay.innerText = 'stop';
+            });
+            node.addEventListener('pause', () => {
+                progress.classList.add('pause');
+                autoplay.innerText = 'pause';
+            });
+            node.addEventListener('resume', () => {
+                progress.classList.remove('pause');
+                autoplay.innerText = 'stop';
+            });
+            node.addEventListener('stop', () => {
+                progress.classList.remove('active');
+                autoplay.classList.remove('active');
+                autoplay.innerText = 'play';
+            });
 
             console.log('window:', window);
 
@@ -231,7 +231,7 @@
             <ul id="node" tabindex="0"></ul>
             <nav id="thumbs" style="--gap: 1rem; --flow: row; --width: 68px; --height: 100px;"></nav>
         </main>
-        <!-- <div id="progress"></div> -->
+        <div id="progress"></div>
 
         <footer>
             <nav>
@@ -243,7 +243,7 @@
                 <!-- <input type="range" min="0" max="8" oninput="onRange(this.value)" /> -->
                 <!-- <button id="-" onclick="node.removeChild(node.lastChild);">-</button> -->
                 <!-- <button id="+" onclick="node.appendChild(createElement('li'))">+</button> -->
-                <!-- <button id="autoplay" onclick="playButton(this)">play</button> -->
+                <button id="autoplay" onclick="playButton(this)">play</button>
             </nav>
 
             <!-- <nav id="dots"></nav> -->
