--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -100,7 +100,7 @@
                 sensity: 2.5,
                 gravity: 1.2,
                 // duration: 375,
-                loop: false,
+                loop: true,
                 snap: 'center',
                 axis: 'x',
                 plugins: [play()],
@@ -174,6 +174,7 @@
                 slidy = slidyCore(node, options);
                 slidyT = slidyCore(thumbs);
                 setTimeout(setEvents);
+                window.onRange = slidy.to
                 // window.onRange = throttle(slidy.to, 50, false);
             });
 
@@ -227,7 +228,7 @@
             <a id="github" href="https://github.com/Valexr/Slidy"></a>
         </header>
 
-        <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
+        <main id="main" style="--gap: 2rem; --flow: row; --width: 30%; --height: 375px">
             <ul id="node" tabindex="0"></ul>
             <nav id="thumbs" style="--gap: 1rem; --flow: row; --width: 68px; --height: 100px;"></nav>
         </main>
@@ -240,7 +241,7 @@
                     <i class="icon icon-refresh"></i>
                 </button>
                 <button id="next" onclick="slidy.to(options.index + 1, +100)">→</button>
-                <!-- <input type="range" min="0" max="8" oninput="onRange(this.value)" /> -->
+                <input type="range" min="0" max="8" oninput="onRange(this.value)" />
                 <button id="-" onclick="node.removeChild(node.lastChild);">-</button>
                 <button id="+" onclick="node.appendChild(document.createElement('li'))">+</button>
                 <button id="autoplay" onclick="playButton(this)">play</button>
